--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,7 +1,7 @@
 @import "./common";
 
 #home {
-  background: linear-gradient(to right, #0186E1, #0298f4 50%, #0186E1);
+  background: linear-gradient(to right, #0186E1, #0298f4 50%, #0186E1), linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   width: 100%;
   height: 100%;
   display: flex;
@@ -325,6 +325,156 @@
                   cursor: default;
                   background: gray;
                 }
+              }
+            }
+          }
+        }
+
+        .register-sec {
+          .region {
+            height: fit-content;
+
+            .body {
+              padding-bottom: 30px;
+
+              .element {
+                display: flex;
+                align-items: center;
+
+                label {
+                  width: 70px;
+                  margin-right: 10px;
+                  display: inline-block;
+                  text-align: right;
+                  color: #777777;
+                }
+
+                .sigh {
+                  width: 16px;
+                  height: 16px;
+                }
+
+                .form-input, .form-input-code {
+                  width: 200px;
+                  padding: 5px;
+                  box-sizing: border-box;
+                  margin-right: 10px;
+                  border: 1px solid #dddddd;
+
+                  &:focus {
+                    border-color: #aaaaaa;
+                  }
+                }
+
+                .form-input-code {
+                  width: 100px;
+                }
+
+                .input-warn {
+                  border-color: red;
+                }
+
+                .send-message {
+                  border: 1px solid #D0D0D0;
+                  padding: 5px 10px;
+                  cursor: pointer;
+                  margin-right: 10px;
+
+                  &:hover {
+                    filter: brightness(110%);
+                  }
+                }
+
+                .send-message-disabled {
+                  cursor: default;
+                  background-color: #aaaaaa;
+                }
+
+                .password-input {
+                  position: relative;
+                  width: fit-content;
+                }
+
+                .radio-group {
+                  display: flex;
+                  align-items: center;
+                  color: #444444;
+
+                  input[type='radio'] {
+                    margin-right: 5px;
+                  }
+
+                  label {
+                    margin-right: 20px;
+                    width: fit-content;
+                  }
+                }
+
+                .read {
+                  color: gray;
+                  font-size: 12px;
+                  margin-bottom: 10px;
+                  display: flex;
+                  align-items: center;
+
+                  input {
+                    margin-right: 2px;
+                  }
+
+                  .with-underline {
+                    cursor: pointer;
+                    text-decoration: underline;
+                  }
+                }
+
+                .button-register {
+                  width: fit-content;
+                  padding: 5px 20px;
+                  font-size: 14px;
+                  color: white;
+                  background-color: #009CE9;
+                  cursor: pointer;
+                  position: relative;
+                  border-radius: 1px;
+
+                  &:before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+                  }
+
+                  &:hover {
+                    filter: brightness(120%);
+                  }
+                }
+
+                .text {
+                  color: gray;
+
+                  .to-login {
+                    color: #0298f4;
+                    cursor: pointer;
+                  }
+                }
+              }
+
+              .warn {
+                height: 20px;
+                line-height: 20px;
+                font-size: 12px;
+                color: red;
+                margin: 0;
+                visibility: hidden;
+                padding: 0 0 0 80px;
+                box-sizing: border-box;
+              }
+
+              .warn-active {
+                visibility: visible;
               }
             }
           }
