--- a/src/style/list.scss
+++ b/src/style/list.scss
@@ -13,6 +13,7 @@
     .left {
       display: flex;
       align-items: center;
+      cursor: default;
 
       img {
         width: 10px;
@@ -58,7 +59,6 @@
     top: -100%;
     width: 100%;
     height: 100%;
-    padding: 10px 0;
     transform: scale(0);
     opacity: 0;
     transition: all 0.5s ease;
@@ -77,12 +77,12 @@
     .content {
       position: absolute;
       left: 25%;
-      top: 10px;
+      top: 50px;
       width: 50%;
-      height: calc(100% - 10px);
+      height: calc(100% - 110px);
       margin: auto;
-      border-radius: 5px;
       overflow-y: auto;
+      box-shadow: 0 0 5px lightgrey;
 
       .title {
         width: 100%;
