--- a/src/style/user.scss
+++ b/src/style/user.scss
@@ -1,11 +1,20 @@
+@import "./common";
+
 #user {
-  cursor: pointer;
+  position: relative;
+
+  .common-loading {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
   .user-content {
     display: flex;
     align-items: center;
+    cursor: pointer;
+    position: relative;
 
-    .avatar {
+    .user-content-avatar {
       width: 25px;
       height: 25px;
       border-radius: 50%;
@@ -13,7 +22,7 @@
       overflow: hidden;
     }
 
-    .name {
+    .user-content-name {
       display: inline-block;
       width: fit-content;
       max-width: 100px;
@@ -25,21 +34,161 @@
       margin-right: 10px;
       cursor: pointer;
     }
+  }
 
-    .vip {
-      color: white;
-      background-color: #BBBBBB;
-      padding: 0 5px;
-      border-radius: 10px;
-      margin-right: 5px;
-      font-size: 10px;
-      margin-top: -5px;
-      font-style: italic;
-      transform: scale(0.9);
+  .user-popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+
+    .mask {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
     }
 
-    .vip-active {
-      background-color: #ffc54d;
+    .user-popup-content {
+      position: relative;
+      top: 40px;
+      left: 10px;
+      width: $left-width - 20px;
+      box-shadow: 0 2px 2px gray;
+      background-color: white;
+
+      .angle {
+        position: absolute;
+        left: 40px;
+        top: -18px;
+        width: 0;
+        height: 0;
+        border: 10px solid transparent;
+        border-bottom-color: white;
+      }
+
+      .line1 {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 10px 0;
+        box-sizing: border-box;
+        margin-bottom: 10px;
+
+        .left {
+          display: flex;
+          align-items: center;
+
+          .avatar {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-right: 10px;
+
+            img {
+              width: 100%;
+            }
+          }
+
+          .text {
+            .top {
+              margin-bottom: 10px;
+
+              label {
+                display: inline-block;
+                font-size: 12px;
+                font-weight: bold;
+                color: black;
+                margin-right: 5px;
+              }
+
+              .option-icon {
+                display: inline-block;
+                width: 13px;
+                height: 13px;
+                cursor: pointer;
+                opacity: 0.7;
+              }
+            }
+
+            .bottom {
+              width: fit-content;
+            }
+          }
+        }
+
+        .right {
+          .my-music {
+            font-size: 12px;
+            color: white;
+            background-color: #87c8d7;
+            padding: 0 5px;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .line2 {
+        display: flex;
+        align-items: center;
+        font-size: 13px;
+        padding: 0 10px;
+        box-sizing: border-box;
+        margin-bottom: 10px;
+        color: gray;
+
+        .left {
+        }
+
+        .divide {
+          width: 1px;
+          height: 12px;
+          background-color: #dddddd;
+          margin: 0 10px;
+        }
+
+        .right {
+          flex-grow: 1;
+
+          .fetch-money {
+            color: #0298f4;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .user-popup-bottom {
+        width: 100%;
+        background-color: #eeeeee;
+        color: #777777;
+        font-size: 12px;
+        cursor: pointer;
+        padding: 10px 0;
+        text-align: center;
+
+        &:hover {
+          color: #aaaaaa;
+        }
+      }
     }
+  }
+
+  .user-content-vip {
+    color: white;
+    background-color: #BBBBBB;
+    padding: 0 5px;
+    border-radius: 10px;
+    margin-right: 5px;
+    font-size: 10px;
+    margin-top: -5px;
+    font-style: italic;
+    transform: scale(0.9);
+  }
+
+  .vip-active {
+    background-color: #ffc54d;
   }
 }
