--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,7 +1,6 @@
 @import "./common";
 
 #home {
-  background: linear-gradient(to right, #0186E1, #0298f4 50%, #0186E1), linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   width: 100%;
   height: 100%;
   display: flex;
@@ -10,9 +9,10 @@
 
   header {
     width: 100%;
+    height: 60px;
     display: flex;
     align-items: center;
-    padding: 10px $x-padding;
+    padding: 0 $x-padding;
     box-sizing: border-box;
     -webkit-app-region: drag;
 
@@ -647,7 +647,6 @@
   main {
     -webkit-app-region: no-drag;
     flex-grow: 1;
-    background: white;
     width: 100%;
     height: 100%;
     display: flex;
@@ -662,7 +661,6 @@
     .right {
       flex-grow: 1;
       height: 100%;
-      background-color: chartreuse;
     }
 
     @media (max-width: $left-width) {
