--- a/src/style/user.scss
+++ b/src/style/user.scss
@@ -112,6 +112,44 @@
                 cursor: pointer;
                 opacity: 0.7;
               }
+
+              .option-popup {
+                position: fixed;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 100;
+
+                .option-popup-mask {
+                  position: absolute;
+                  left: 0;
+                  top: 0;
+                  width: 100%;
+                  height: 100%;
+                }
+
+                .option-popup-content {
+                  position: absolute;
+                  left: 205px;
+                  top: 65px;
+                  width: fit-content;
+                  background-color: white;
+                  box-shadow: 0 0 2px gray;
+
+                  .option-popup-element {
+                    padding: 10px 20px;
+                    font-size: 13px;
+                    color: gray;
+                    cursor: pointer;
+
+                    &:hover {
+                      background-color: #0298f4;
+                      color: white;
+                    }
+                  }
+                }
+              }
             }
 
             .bottom {
@@ -137,7 +175,7 @@
         font-size: 13px;
         padding: 0 10px;
         box-sizing: border-box;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         color: gray;
 
         .left {
@@ -160,6 +198,28 @@
         }
       }
 
+      .line3 {
+        padding: 0 10px;
+        box-sizing: border-box;
+        margin-bottom: 10px;
+
+        .line3-content {
+          border-top: 1px solid #dddddd;
+          padding-top: 10px;
+          color: gray;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          font-size: 12px;
+
+          .buy-svip {
+            color: #0298f4;
+            cursor: pointer;
+            font-size: 13px;
+          }
+        }
+      }
+
       .user-popup-bottom {
         width: 100%;
         background-color: #eeeeee;
@@ -170,7 +230,7 @@
         text-align: center;
 
         &:hover {
-          color: #aaaaaa;
+          color: #0298f4;
         }
       }
     }
