--- a/src/style/user.scss
+++ b/src/style/user.scss
@@ -131,8 +131,7 @@
 
                 .option-popup-content {
                   position: absolute;
-                  left: 205px;
-                  top: 65px;
+                  top: 55px;
                   width: fit-content;
                   background-color: white;
                   box-shadow: 0 0 2px gray;
@@ -144,7 +143,7 @@
                     cursor: pointer;
 
                     &:hover {
-                      background-color: #0298f4;
+                      background-color: $blue;
                       color: white;
                     }
                   }
@@ -192,7 +191,7 @@
           flex-grow: 1;
 
           .fetch-money {
-            color: #0298f4;
+            color: $blue;
             cursor: pointer;
           }
         }
@@ -213,7 +212,7 @@
           font-size: 12px;
 
           .buy-svip {
-            color: #0298f4;
+            color: $blue;
             cursor: pointer;
             font-size: 13px;
           }
@@ -222,7 +221,7 @@
 
       .user-popup-bottom {
         width: 100%;
-        background-color: #eeeeee;
+        background-color: $light-gray;
         color: #777777;
         font-size: 12px;
         cursor: pointer;
@@ -230,7 +229,7 @@
         text-align: center;
 
         &:hover {
-          color: #0298f4;
+          color: $blue;
         }
       }
     }
