--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -163,13 +163,13 @@
                   box-sizing: border-box;
 
                   &:hover {
-                    color: #0298f4;
+                    color: $blue;
                   }
                 }
 
                 .label-active {
-                  color: #0298f4;
-                  border-bottom: 2px solid #0298f4;
+                  color: $blue;
+                  border-bottom: 2px solid $blue;
                 }
               }
 
@@ -462,7 +462,7 @@
                     color: gray;
 
                     .to-login {
-                      color: #0298f4;
+                      color: $blue;
                       cursor: pointer;
                     }
                   }
