--- a/src/style/main-right.scss
+++ b/src/style/main-right.scss
@@ -1,6 +1,8 @@
 @import "./common";
 
 #main-right {
+  height: 100%;
+
   .header {
     position: relative;
     display: flex;
@@ -33,5 +35,10 @@
       background-color: $blue;
       transition: all 0.5s ease;
     }
+  }
+
+  .main {
+    width: 100%;
+    height: 100%;
   }
 }
