--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -20,3 +20,41 @@ $lighter-gray: #F5F5F5;
     }
   }
 }
+
+.big-loading {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  &:after {
+    content: '';
+    width: 64px;
+    height: 64px;
+    background: url("/img/big-loading.png") no-repeat center center;
+    background-size: contain;
+    animation: common-loading 1s linear infinite;
+    @keyframes big-loading {
+      from {
+        transform: rotate(0);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  }
+}
