--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -4,6 +4,8 @@ $blue: #0298f4;
 $light-blue: #64B0FA;
 $light-gray: #CECECE;
 $lighter-gray: #F5F5F5;
+$main-right-height: calc(100% - 41px);
+$account-setting-labels-width: 550px;
 
 .common-loading {
   width: 16px;
