--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -60,3 +60,23 @@ $account-setting-labels-width: 550px;
     }
   }
 }
+
+.music-play {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  div {
+    content: '';
+    width: 0;
+    height: 0;
+    border: 7px solid transparent;
+    border-left-color: white;
+    margin-left: 7px;
+    margin-top: 3px;
+  }
+}
