--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,6 +1,8 @@
 $x-padding: 20px;
 $left-width: 310px;
 $blue: #0298f4;
+$black: rgba(0, 0, 0, 0.7);
+$light-black: rgba(0, 0, 0, 0.5);
 $light-blue: #64B0FA;
 $light-gray: #CECECE;
 $lighter-gray: #F5F5F5;
