--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -674,6 +674,7 @@
 
     .left {
       width: $left-width;
+      min-width: $left-width;
       height: 100%;
       border-right: 1px solid #dddddd;
     }
