--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -4,6 +4,7 @@ $blue: #0298f4;
 $black: rgba(0, 0, 0, 0.7);
 $light-black: rgba(0, 0, 0, 0.5);
 $light-blue: #64B0FA;
+$dark-blue: #148BDC;
 $light-gray: #CECECE;
 $lighter-gray: #F5F5F5;
 $main-right-height: calc(100% - 41px);
