--- a/src/style/list.scss
+++ b/src/style/list.scss
@@ -1,9 +1,11 @@
+@import "./common";
+
 #list {
   width: 100%;
   border-bottom: 1px solid #dddddd;
 
   .header {
-    width: 100%;
+    width: $left-width;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -55,15 +57,11 @@
 
   .list-popup {
     position: fixed;
-    left: -100%;
-    top: -100%;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    transform: scale(0);
-    opacity: 0;
-    transition: all 0.5s ease;
     z-index: 10;
-    overflow-y: auto;
 
     .mask {
       position: fixed;
@@ -71,33 +69,16 @@
       top: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
     }
 
     .content {
       position: absolute;
-      left: 25%;
-      top: 44px;
-      width: 50%;
-      height: calc(100% - 110px);
+      left: $left-width - 153px;
+      width: 150px;
       margin: auto;
-      overflow-y: auto;
       box-shadow: 0 0 2px #a7a7a7;
       border-radius: 3px;
-
-      .title {
-        width: 100%;
-        display: block;
-        font-size: 14px;
-        text-align: center;
-        padding: 10px 0;
-        background-color: white;
-        cursor: default;
-        position: relative;
-        z-index: 10;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-        margin: 0;
-      }
+      border: 1px solid #dddddd;
 
       .item {
         width: 100%;
@@ -106,11 +87,11 @@
         label {
           display: block;
           width: 100%;
-          padding: 10px 0;
+          padding: 10px 0 10px 20px;
+          box-sizing: border-box;
           font-size: 13px;
           color: rgba(0, 0, 0, 0.5);
           background-color: white;
-          text-align: center;
           cursor: pointer;
           transition: all 0.3s ease;
 
@@ -142,11 +123,14 @@
         }
 
         .sub {
-          width: 100%;
-          height: 0;
-          transition: all 0.3s ease;
+          position: absolute;
+          left: -100%;
+          top: 0;
+          width: 150px;
           background-color: white;
-          border-bottom: 1px solid #dddddd;
+          border: 1px solid #dddddd;
+          display: none;
+          box-shadow: 0 0 2px #a7a7a7;
 
           h5 {
             img {
@@ -161,6 +145,12 @@
             @extend .item;
           }
         }
+
+        &:hover {
+          .sub {
+            display: block;
+          }
+        }
       }
 
       .item-border {
@@ -168,13 +158,6 @@
         border-bottom: 1px solid #dddddd;
       }
     }
-  }
-
-  .list-popup-active {
-    transform: scale(1);
-    opacity: 1;
-    top: 0;
-    left: 0;
   }
 
   .container {
