--- a/src/style/home-footer.scss
+++ b/src/style/home-footer.scss
@@ -56,6 +56,22 @@
       transform: rotate(0);
       margin-left: 5px;
     }
+
+    .two-line {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+
+      &:before, &:after {
+        content: '';
+        width: 5px;
+        height: 50%;
+        background: white;
+        margin: 0 3px;
+      }
+    }
   }
 
   .next {
