--- a/src/style/home-footer.scss
+++ b/src/style/home-footer.scss
@@ -245,6 +245,63 @@
     }
   }
 
+  .sound {
+    position: relative;
+
+    .popup {
+      position: absolute;
+      left: -4px;
+      top: -110px;
+      width: 30px;
+      height: 110px;
+      background-color: chocolate;
+
+      .content {
+        position: relative;
+        width: 100%;
+        height: 90%;
+        background-color: $black;
+        padding-top: 15px;
+        box-sizing: border-box;
+
+        .line {
+          position: relative;
+          width: 3px;
+          height: calc(100% - 5px);
+          margin: auto auto;
+          background-color: rgba(143, 143, 143, 0.7);
+          cursor: pointer;
+
+          .inner {
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            left: 0;
+            background-color: white;
+          }
+        }
+
+        .circle {
+          position: absolute;
+          left: calc(50% - 3px);
+          width: 7px;
+          height: 7px;
+          border-radius: 50%;
+          background-color: white;
+          cursor: pointer;
+        }
+      }
+
+      .down {
+        width: 0;
+        height: 0;
+        margin-left: calc(50% - 5px);
+        border: 5px solid transparent;
+        border-top-color: $black;
+      }
+    }
+  }
+
   .special {
     position: relative;
     font-size: 13px;
