--- a/src/style/home-footer.scss
+++ b/src/style/home-footer.scss
@@ -382,4 +382,173 @@
       opacity: 1;
     }
   }
+
+  .play-list {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    .count {
+      font-size: 18px;
+      color: white;
+      display: inline-block;
+      width: 20px;
+      opacity: 0.7;
+      margin-left: 5px;
+    }
+
+    .popup {
+      position: fixed;
+      right: 0;
+      bottom: 86px;
+      width: 250px;
+      height: 60%;
+      background-color: white;
+      box-shadow: 0 0 2px gray;
+      z-index: 10;
+
+      .banner {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 10px 0 20px;
+        box-sizing: border-box;
+        background-color: rgba(102, 179, 255, 0.3);
+
+        .left {
+          font-size: 13px;
+          color: $blue;
+        }
+
+        .right {
+          display: flex;
+          align-items: center;
+
+          img {
+            width: 14px;
+            height: 14px;
+            opacity: 0.5;
+            cursor: pointer;
+            margin-left: 10px;
+
+            &:hover {
+              opacity: 1;
+            }
+          }
+
+          .close {
+            width: 12px;
+            height: 12px;
+          }
+        }
+      }
+
+      .content {
+        width: 100%;
+        height: calc(100% - 30px);
+        overflow-y: auto;
+
+        .item {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          height: 35px;
+
+          .left {
+            padding-left: 20px;
+            color: $black;
+            font-size: 13px;
+            width: 60%;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+
+          .right {
+            flex-grow: 1;
+            padding-right: 5px;
+            color: gray;
+            font-size: 11px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+
+            img {
+              width: 14px;
+              height: 14px;
+              cursor: pointer;
+              margin: 0 5px;
+              opacity: 0.5;
+            }
+
+            .playing {
+              opacity: 1;
+              cursor: default;
+            }
+
+            .more {
+              margin-top: 8px;
+            }
+
+            .operation {
+              display: none;
+              align-items: center;
+            }
+          }
+
+          &:hover {
+            background-color: #f5f5f5;
+
+            .right {
+              justify-content: space-between;
+
+              .operation {
+                display: flex;
+              }
+
+              .duration {
+                display: none;
+              }
+            }
+          }
+        }
+
+        .item-active {
+          background-color: #F5F5F5;
+
+          .left {
+            width: 45%;
+          }
+
+          .right {
+            justify-content: space-between;
+
+            .operation {
+              display: flex;
+            }
+
+            .duration {
+              display: none;
+            }
+          }
+        }
+      }
+
+      .triangle {
+        width: 0;
+        height: 0;
+        border: 10px solid transparent;
+        border-top-color: white;
+        margin-left: 80%;
+      }
+    }
+
+    &:hover {
+      .count {
+        opacity: 1;
+      }
+    }
+  }
 }
