--- a/src/style/home-footer.scss
+++ b/src/style/home-footer.scss
@@ -490,6 +490,60 @@
 
             .more {
               margin-top: 8px;
+              position: relative;
+
+              .more-popup {
+                position: fixed;
+                right: 0;
+                width: 120px;
+                background-color: white;
+                box-shadow: 0 0 2px gray;
+
+                .element {
+                  cursor: pointer;
+                  color: $black;
+                  font-size: 12px;
+                  padding: 10px 0 10px 20px;
+                  box-sizing: border-box;
+                  position: relative;
+
+                  .sub-popup {
+                    display: none;
+                    position: absolute;
+                    left: -100%;
+                    bottom: 0;
+                    width: 120px;
+                    box-shadow: 0 0 2px gray;
+                    max-height: 250px;
+                    overflow-y: auto;
+                    cursor: default;
+                    background-color: white;
+
+                    h6 {
+                      font-size: 14px;
+                      padding: 10px 0 5px 10px;
+                      margin: 0;
+                    }
+
+                    .sub-element {
+                      padding: 10px 0 10px 20px;
+                      cursor: pointer;
+
+                      &:hover {
+                        background-color: $blue;
+                      }
+                    }
+                  }
+
+                  &:hover {
+                    background-color: $blue;
+
+                    .sub-popup {
+                      display: block;
+                    }
+                  }
+                }
+              }
             }
 
             .operation {
