--- a/src/style/main-left.scss
+++ b/src/style/main-left.scss
@@ -9,7 +9,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 10px $x-padding;
     box-sizing: border-box;
     border-bottom: 1px solid #dddddd;
