--- a/src/style/main-right/MusicRecommend.scss
+++ b/src/style/main-right/MusicRecommend.scss
@@ -345,7 +345,7 @@
     }
   }
 
-  .recommend-custom, .recommend-music-list {
+  .recommend-custom, .recommend-music-list, .recommend-mv-radio, .recommend-album, .recommend-mv {
     margin-bottom: 20px;
 
     .banner {
@@ -452,6 +452,207 @@
               border: 1px solid #dddddd;
               border-top: 0;
             }
+          }
+        }
+      }
+    }
+  }
+
+  .recommend-mv-radio {
+    .banner {
+      .right {
+        display: flex;
+        align-items: center;
+
+        .change {
+          margin-right: 5px;
+          display: flex;
+          align-items: center;
+          padding-right: 10px;
+          border-right: 1px solid #dddddd;
+          font-size: 12px;
+          color: $light-black;
+          cursor: pointer;
+
+          img {
+            width: 12px;
+            height: 12px;
+            margin-right: 5px;
+          }
+
+          &:hover {
+            color: $blue;
+          }
+        }
+      }
+    }
+
+    .content {
+      .item {
+        .img {
+          .on-hover {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.15);
+
+            label {
+              display: block;
+              color: white;
+              font-size: 30px;
+            }
+
+            .play {
+              display: none;
+              width: 50px;
+              height: 50px;
+              background-color: rgba(0, 0, 0, 0.5);
+              align-items: center;
+              justify-content: center;
+              border-radius: 50%;
+
+              img {
+                width: 24px;
+                height: 24px;
+                margin-left: 2px;
+              }
+            }
+
+            &:hover {
+              label {
+                display: none;
+              }
+
+              .play {
+                display: flex;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .recommend-album {
+    .banner {
+      .left {
+        display: flex;
+        align-items: center;
+
+        label {
+          font-size: 12px;
+          color: $light-black;
+          cursor: pointer;
+          margin: 0 5px;
+
+          &:hover {
+            color: $blue;
+          }
+        }
+
+        .active-label {
+          color: $blue;
+        }
+      }
+    }
+
+    .content {
+      .item {
+        .bottom {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          font-size: 12px;
+          color: $light-black;
+
+          label {
+            display: inline-block;
+            width: 70%;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+
+          img {
+            opacity: 0.7;
+            width: 12px;
+            height: 12px;
+            cursor: pointer;
+
+            &:hover {
+              opacity: 1;
+            }
+          }
+
+          span {
+            color: #FF8111;
+          }
+        }
+      }
+    }
+  }
+
+  .recommend-mv {
+    margin-bottom: 0;
+
+    .content {
+      .item {
+        .img {
+          .mask {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.15);
+            display: none;
+            align-items: center;
+            justify-content: center;
+
+            .play {
+              width: 50px;
+              height: 50px;
+              border-radius: 50%;
+              background-color: rgba(0, 0, 0, 0.5);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              img {
+                width: 24px;
+                height: 24px;
+                margin-left: 2px;
+              }
+            }
+          }
+        }
+
+        .name {
+          margin-bottom: 3px;
+        }
+
+        .description {
+          font-size: 13px;
+          color: $light-black;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          padding: 0;
+          margin: 0;
+        }
+
+        &:hover {
+          .mask {
+            display: flex;
+          }
+
+          .description {
+            color: $blue;
           }
         }
       }
