--- a/src/style/main-right/MusicRecommend.scss
+++ b/src/style/main-right/MusicRecommend.scss
@@ -374,11 +374,10 @@
       margin-top: 5px;
 
       .every-recommend, .item {
-        cursor: pointer;
-
         .img {
           width: 100%;
           position: relative;
+          cursor: pointer;
 
           .icon {
             width: 100%;
@@ -399,10 +398,9 @@
           white-space: nowrap;
           text-overflow: ellipsis;
           overflow: hidden;
-        }
+          cursor: pointer;
 
-        &:hover {
-          .name {
+          &:hover {
             color: $blue;
           }
         }
@@ -564,6 +562,7 @@
     .content {
       .item {
         .bottom {
+          position: relative;
           display: flex;
           align-items: center;
           justify-content: space-between;
@@ -591,6 +590,188 @@
 
           span {
             color: #FF8111;
+          }
+
+          .popup {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 100;
+            cursor: default;
+
+            .popup-content {
+              position: absolute;
+              width: 300px;
+              background-color: white;
+              padding: 0 10px;
+              box-sizing: border-box;
+              box-shadow: 0 0 2px gray;
+
+              .top {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                font-size: 13px;
+                color: $black;
+                padding: 5px 0;
+                border-bottom: 1px solid #dddddd;
+
+                .close {
+                  position: relative;
+                  width: 16px;
+                  height: 16px;
+                  cursor: pointer;
+
+                  &:before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    width: 100%;
+                    height: 1px;
+                    background-color: $light-black;
+                    transform: rotate(45deg);
+                  }
+
+                  &:after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    width: 100%;
+                    height: 1px;
+                    background-color: $light-black;
+                    transform: rotate(-45deg);
+                  }
+
+                  &:hover {
+                    &:before, &:after {
+                      background-color: $blue;
+                    }
+                  }
+                }
+              }
+
+              .middle {
+                height: 240px;
+
+                .music {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  padding: 7px 0;
+
+                  .left {
+                    width: 70%;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    color: $black;
+                    font-size: 13px;
+                    cursor: pointer;
+
+                    &:hover {
+                      color: $blue;
+                    }
+                  }
+
+                  .right {
+                    display: flex;
+                    align-items: center;
+
+                    img {
+                      width: 16px;
+                      height: 16px;
+                      opacity: 0.7;
+                      cursor: pointer;
+                      margin-right: 5px;
+
+                      &:hover {
+                        opacity: 1;
+                      }
+                    }
+
+                    .play-icon {
+                      transform: rotate(90deg);
+                    }
+                  }
+
+                  &:hover {
+                    background-color: #e8fffa;
+                  }
+                }
+              }
+
+              .bottom {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 5px 0;
+                border-radius: 1px;
+
+                .pager {
+                  display: flex;
+                  align-items: center;
+
+                  img {
+                    width: 16px;
+                    height: 16px;
+                    cursor: pointer;
+                    opacity: 0.7;
+
+                    &:hover {
+                      opacity: 1;
+                    }
+                  }
+
+                  label {
+                    font-size: 12px;
+                    color: $light-black;
+                    cursor: default;
+                    margin: 0 10px;
+                  }
+
+                  .prev {
+                    transform: rotate(90deg);
+                  }
+
+                  .next {
+                    transform: rotate(-90deg);
+                  }
+
+                  .disabled {
+                    cursor: default;
+
+                    &:hover {
+                      opacity: 0.7;
+                    }
+                  }
+                }
+
+                button {
+                  background-color: white;
+                  color: $black;
+                  border: 1px solid #dddddd;
+                  padding: 5px 10px;
+                  display: flex;
+                  align-items: center;
+
+                  img {
+                    width: 16px;
+                    height: 16px;
+                    transform: rotate(90deg);
+                    margin-right: 5px;
+                  }
+
+                  &:hover {
+                    border-color: #a8fff5;
+                    color: $blue;
+                  }
+                }
+              }
+            }
           }
         }
       }
